# cmake_with_library_linked_to_app

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/header/: XmlWrapper.h
application/source/: XmlWrapper.cpp  main.cpp
binary/: persons.xml
cmake/modules/: CodeCoverage.cmake
printer/: CMakeLists.txt
printer/header/: printer.h
printer/source/: printer.cpp
project/: README.md
project/application/header/: definitions.h
project/application/source/: main.cpp
tests/: CMakeLists.txt  printer_test.cpp
tinyxml/: CMakeLists.txt
tinyxml/source/: tinyxmlerror.cpp  tinyxmlparser.cpp
